--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -632,6 +632,7 @@ a:focus {outline:none !important;}
 
 .modal-bkgd {
 	background:#00060b url("../img/modal-header.jpg") no-repeat center center;
+	background-size:cover;
 
 	h1 {
 	color:$white-color;
